WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
219175
ASSERT NOT REACHED in WebCore::DisplayList::DrawImageBuffer::apply seen with TestWebKitAPI.DisplayListTests.ReplayWithMissingResource
https://bugs.webkit.org/show_bug.cgi?id=219175
Summary
ASSERT NOT REACHED in WebCore::DisplayList::DrawImageBuffer::apply seen with ...
Ryan Haddad
Reported
2020-11-19 12:29:54 PST
TestWebKitAPI.DisplayListTests.ReplayWithMissingResource SHOULD NEVER BE REACHED ./platform/graphics/displaylists/DisplayListItems.cpp(426) : void WebCore::DisplayList::DrawImageBuffer::apply(WebCore::GraphicsContext &) const 1 0x105181a69 WTFCrash 2 0x11c85190b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x120bbbf93 WebCore::DisplayList::DrawImageBuffer::apply(WebCore::GraphicsContext&) const 4 0x120bbb495 WebCore::DisplayList::ItemHandle::apply(WebCore::GraphicsContext&) 5 0x120bca34d WebCore::DisplayList::Replayer::applyItem(WebCore::DisplayList::ItemHandle) 6 0x120bbaee7 WebCore::DisplayList::Replayer::replay(WebCore::FloatRect const&, bool) 7 0x102b119db TestWebKitAPI::DisplayListTests_ReplayWithMissingResource_Test::TestBody() 8 0x1033f7de4 void testing::internal::HandleSehExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 9 0x1033c65ab void testing::internal::HandleExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 10 0x1033c64e6 testing::Test::Run() 11 0x1033c767a testing::TestInfo::Run() 12 0x1033c8564 testing::TestCase::Run() 13 0x1033d3c18 testing::internal::UnitTestImpl::RunAllTests() 14 0x1033fcde4 bool testing::internal::HandleSehExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) 15 0x1033d370b bool testing::internal::HandleExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) 16 0x1033d35dd testing::UnitTest::Run() 17 0x103185251 RUN_ALL_TESTS() 18 0x1031851e2 TestWebKitAPI::TestsController::run(int, char**) 19 0x103392d75 main 20 0x7fff6f0a0cc9 start 21 0x2
https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.DisplayListTests.ReplayWithMissingResource
Attachments
Patch
(4.00 KB, patch)
2020-11-19 13:27 PST
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryan Haddad
Comment 1
2020-11-19 12:30:30 PST
This test was added with
https://trac.webkit.org/changeset/270002/webkit
Radar WebKit Bug Importer
Comment 2
2020-11-19 12:31:20 PST
<
rdar://problem/71597208
>
Wenson Hsieh
Comment 3
2020-11-19 12:31:48 PST
Whoops, sorry about that! I'll have a fix up soon.
Wenson Hsieh
Comment 4
2020-11-19 13:27:01 PST
Created
attachment 414615
[details]
Patch
EWS
Comment 5
2020-11-19 14:12:08 PST
Committed
r270051
: <
https://trac.webkit.org/changeset/270051
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 414615
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug