ASSERT NOT REACHED in WebCore::DisplayList::DrawImageBuffer::apply seen with TestWebKitAPI.DisplayListTests.ReplayWithMissingResource https://bugs.webkit.org/show_bug.cgi?id=219175

Reviewed by Tim Horton.

We're currently hitting debug assertions when applying native image and image buffer display list items after
r270002, due to the fact that `applyImageBufferItem` and `applyNativeImageItem` return `WTF::nullopt` in the
case where the image resources are present, so we proceed by attempting to apply the item with only the graphics
context.

Fix this by checking the item type and always return early after calling either `applyImageBufferItem` or
`applyNativeImageItem`.

* platform/graphics/displaylists/DisplayListReplayer.cpp:
(WebCore::DisplayList::applyImageBufferItem):
(WebCore::DisplayList::applyNativeImageItem):
(WebCore::DisplayList::Replayer::applyItem):


Canonical link: https://commits.webkit.org/231791@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270051 268f45cc-cd09-0410-ab3c-d52691b4dbfc